<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20px"
    android:elevation="10dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
       >
        <ImageButton
            android:id="@+id/ib_cancle_dialog"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_close"
            android:clickable="true"/>

    </RelativeLayout>
 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal">
    <TextView
        style="@style/fragment_comment_tv"
        android:text="@string/xlmc"
        />
    <TextView
        android:id="@+id/tv_routeName_dialog"
        style="@style/fragment_comment_tv"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            style="@style/fragment_comment_tv"
            android:text="@string/jsy"/>
        <TextView
            android:id="@+id/tv_jsy_dialog"
            style="@style/fragment_comment_tv"
            android:lines="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_qcbd_dialog_name"
            style="@style/fragment_comment_tv"
            android:text="@string/qcbd"/>
        <TextView
            android:id="@+id/tv_qcbd_dialog"
            style="@style/fragment_comment_tv"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_qmbd_dialog_name"
            style="@style/fragment_comment_tv"
            android:text="@string/qmbd"/>
        <TextView
            android:id="@+id/tv_qmbd_dialog"
            style="@style/fragment_comment_tv"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_jsydl_dialog_name"
            style="@style/fragment_comment_tv"
            android:text="@string/jsuydl"/>
        <TextView
            android:id="@+id/tv_jsydl_dialog"
            style="@style/fragment_comment_tv"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_isje_dialog_name"
            style="@style/fragment_comment_tv"
            android:text="@string/jsuje"/>
        <TextView
            android:id="@+id/tv_isje_dialog"
            style="@style/fragment_comment_tv"
            />
    </LinearLayout>
</LinearLayout>