<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/top_bar_bg"
            android:gravity="center"
            android:text="@string/jzxz"
            android:textColor="#fff"
            android:textSize="40px"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="20px">

            <TextView
                style="@style/select_building_tv"
                android:text="@string/xq" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="98px"
                android:background="@drawable/icon_ectangle_bg">

                <Spinner
                    android:id="@+id/spinner_school"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>

            <TextView
                style="@style/select_building_tv"
                android:text="@string/jz" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="98px"
                android:background="@drawable/icon_ectangle_bg">

                <Spinner
                    android:id="@+id/spinner_building"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>

            <TextView
                style="@style/select_building_tv"
                android:text="@string/lc" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="98px"
                android:background="@drawable/icon_ectangle_bg">

                <Spinner
                    android:id="@+id/spinner_floor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>

            <TextView
                style="@style/select_building_tv"
                android:text="@string/fj" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="98px"
                android:background="@drawable/icon_ectangle_bg">

                <Spinner
                    android:id="@+id/spinner_room"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>

            <Button
                android:id="@+id/btn_confirm_selectbuilding"
                style="@style/big_button_bg"
                android:layout_marginTop="80px"
                android:text="@string/qd" />
        </LinearLayout>
    </LinearLayout>
    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit_bind_room_loading"
        style="@style/SpinKitView.Large.FadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/top_bar_bg" />
</RelativeLayout>