<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:xrefreshview="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/window_gray"
    tools:context="com.northmeter.prepaymentmanage.ui.ControlTaskReultActivity">
    <include layout="@layout/layout_titlebar"/>
    <TextView
        android:id="@+id/tv_searchtime"
        android:layout_width="match_parent"
        android:layout_height="72px"
        android:text="2016/11/24"
        android:gravity="center_vertical"
        android:textColor="#808080"
        android:paddingLeft="20px"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78px"
        android:background="#fff"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="30px"
            android:textColor="#000"
            android:text="@string/xlmc"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="30px"
            android:text="@string/czsj"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="30px"
            android:textColor="#000"
            android:text="@string/czlx"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="30px"
            android:textColor="#000"
            android:text="@string/czjg"/>
    </LinearLayout>
    <com.andview.refreshview.XRefreshView
        android:id="@+id/xRefreshView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        xrefreshview:isHeightMatchParent="true"
        xrefreshview:isWidthMatchParent="true">
        <ListView
            android:id="@+id/lv_es"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30px" />
    </com.andview.refreshview.XRefreshView>
</LinearLayout>
