<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/layout_titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/image_new_page_3"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:textSize="19sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="当前余额(元)" />
        <TextView
            android:id="@+id/tv_zje_ed"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="21sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/rl_yff_ed"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/yffye"
                    android:gravity="center"
                    android:textSize="19sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
                <TextView
                    android:id="@+id/tv_yff_ed"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#DEDFE0"/>
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_bzje_name"
                    android:gravity="center"
                    android:textSize="19sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bzdye"/>
                <TextView
                    android:id="@+id/tv_bzje_ed"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit_topup_loading"
            style="@style/SpinKitView.Large.FadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone"
            app:SpinKit_Color="@color/top_bar_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="29px">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/tv_bh_ed"
                style="@style/electricity_text"
                android:text="@string/dbbh" />

            <TextView
                android:id="@+id/tv_dbbh_ed"
                style="@style/equipment_tv"
                />
        </RelativeLayout>

        <TextView style="@style/myline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tv_zt_ed"
                style="@style/electricity_text"
                android:text="@string/dbzt" />
            <TextView
                android:id="@+id/tv_dbzt_ed"
                android:maxLines="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:textColor="#f7931e"
                android:textSize="17sp"
               />
        </LinearLayout>

        <TextView style="@style/myline" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/tv_zsyl_ed0"
                style="@style/electricity_text"
                android:text="@string/zydl"
                />

            <TextView
                style="@style/equipment_tv"
                android:id="@+id/tv_zydl_ed"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_line_ed"
            style="@style/myline" />
        <TextView style="@style/myline" />
    </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_update_time_ed"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:textColor="#808080"
        android:gravity="center_vertical"
        android:layout_marginLeft="20px"
        />

    <Button
        android:id="@+id/btn_reading_ed"
        android:text="@string/dbcb"
        style="@style/big_button_bg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"

        />
</LinearLayout>