<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130px"
    android:padding="20px"
    >
    <ImageView
        android:id="@+id/iv_head_lv_item_eq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lv_item_equipment_electricity"
        />
    <TextView
        android:id="@+id/tv_routeName_lv_item_eq"
        android:layout_toRightOf="@+id/iv_head_lv_item_eq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="26px"
        android:textStyle="bold"
        android:layout_marginLeft="20px"
       />
    <TextView
        android:id="@+id/tv1_eq"
        android:layout_below="@+id/tv_routeName_lv_item_eq"
        android:layout_alignLeft="@+id/tv_routeName_lv_item_eq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24px"
        android:textColor="#3E3A39"
        android:text="@string/zye"/>
    <TextView
        android:id="@+id/tv_balance_lv_item_eq"
        android:layout_below="@+id/tv_routeName_lv_item_eq"
        android:layout_toRightOf="@+id/tv1_eq"
        android:textSize="24px"
        android:layout_marginLeft="20px"
        android:textColor="#6bc877"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />
    <TextView
        android:id="@+id/tv2_eq"
        android:layout_below="@+id/tv_balance_lv_item_eq"
        android:layout_alignLeft="@+id/tv1_eq"
        android:textColor="#3E3A39"
        android:textSize="24px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbzt"/>
    <TextView
        android:id="@+id/tv_electricState_lv_item_eq"
        android:layout_below="@+id/tv_balance_lv_item_eq"
        android:layout_toRightOf="@id/tv2_eq"
        android:layout_width="wrap_content"
        android:layout_marginLeft="15px"
        android:textColor="#6bc877"
        android:textSize="24px"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/tv3_eq"
        android:layout_toRightOf="@id/tv_electricState_lv_item_eq"
        android:layout_below="@+id/tv_balance_lv_item_eq"
        android:layout_marginLeft="40px"
        android:textColor="#3E3A39"
        android:textSize="24px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txzt"/>
    <TextView
        android:id="@+id/tv_communicationStatus_lv_item_eq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv3_eq"
        android:layout_marginLeft="15px"
        android:textSize="24px"
        android:textColor="#6bc877"
        android:layout_below="@+id/tv_balance_lv_item_eq"
       />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:src="@drawable/icon_back_right"
        android:layout_alignParentRight="true"/>

</RelativeLayout>